# learn

./: .gitignore  CMakeLists.txt  Makefile  README.md  file.txt  function-1.txt  function-2.txt  hello.c
include/: mymath.h
src/: add.cpp  div.cpp  main.cpp  mul.cpp  sub.cpp
